Possible fix for WinEdt push after JVM changes in Java 7u21.